# transfer-app

./: .gitignore  Cargo.toml  README.md
src/: config.rs  download.rs  error.rs  html.rs  lib.rs  main.rs  observability.rs  server.rs  state.rs  tls.rs  upload.rs
src/download/: etag.rs  mod.rs  range.rs
src/fs/: meta.rs  mod.rs  operations.rs  path_safety.rs  walker.rs
src/middleware/: mod.rs  request_id.rs  trace.rs
src/preview/: markdown.rs  mod.rs  text.rs
src/routes/: download.rs  files.rs  health.rs  mod.rs  preview.rs  static_assets.rs  upload.rs  zipdl.rs
src/upload/: janitor.rs  manager.rs  mod.rs  session.rs  writer.rs
src/util/: ip.rs  mime.rs  mod.rs
src/zip/: streaming.rs
static/: index.html
static/css/: layout.css  tokens.css
static/js/: actions.js  api.js  main.js  router.js  store.js
static/js/components/: breadcrumb.js  context-menu.js  file-list.js  preview-modal.js  theme-toggle.js  toast.js  toolbar.js  upload-panel.js
static/js/utils/: format.js
tls/: gen-cert.sh
