[package]
name = "transfer-app"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
mime_guess = "2.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
html-escape = "0.2.13"
percent-encoding = "2.3"
multer = "2.1.0"
sanitize-filename = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
memmap2 = "0.9.5"
