[package]
name = "transfer-app"
version = "0.2.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
mime_guess = "2.0"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
html-escape = "0.2.13"
percent-encoding = "2.3"
multer = "2.1.0"
sanitize-filename = "0.4"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
memmap2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8.0"
